apply git patch provided by ChatGPT in order to introduce Java 21, Lombok and some clean code rules