@@ -8,10 +8,8 @@ import org.springframework.util.Base64Utils;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/moderators")
@@ -24,13 +22,16 @@ public class ModeratorController {
     }
 
     @GetMapping
-    public List<ModeratorDTO> getAllModerators() {
-        return moderatorService.getAllModerators().stream().map(moderator -> new ModeratorDTO(
-                moderator.getId(),
-                moderator.getFirstName(),
-                moderator.getLastName(),
-                "data:image/jpeg;base64," + Base64Utils.encodeToString(moderator.getImageData())
-        )).collect(Collectors.toList());
+    public ResponseEntity<List<ModeratorDTO>> getAllModerators() {
+        List<ModeratorDTO> moderators = moderatorService.getAllModerators().stream()
+                .map(moderator -> new ModeratorDTO(
+                        moderator.getId(),
+                        moderator.getFirstName(),
+                        moderator.getLastName(),
+                        "data:image/jpeg;base64," + Base64Utils.encodeToString(moderator.getImageData())
+                ))
+                .toList();
+        return ResponseEntity.ok(moderators);
     }
 
     @PostMapping(consumes = "multipart/form-data")
@@ -39,31 +40,16 @@ public class ModeratorController {
             @RequestParam("lastName") String lastName,
             @RequestParam("image") MultipartFile file) {
 
-        try {
-            Moderator createdModerator = moderatorService.createModerator(firstName, lastName, file);
-            return new ResponseEntity<>(createdModerator, HttpStatus.CREATED);
-        } catch (IOException e) {
-            return new ResponseEntity<>(null, HttpStatus.INTERNAL_SERVER_ERROR);
-        }
+        Moderator createdModerator = moderatorService.createModerator(firstName, lastName, file);
+        return new ResponseEntity<>(createdModerator, HttpStatus.CREATED);
     }
 
     @DeleteMapping("/{id}")
-    public void deleteModerator(@PathVariable UUID id) {
+    public ResponseEntity<Void> deleteModerator(@PathVariable UUID id) {
         moderatorService.deleteModerator(id);
+        return ResponseEntity.noContent().build();
     }
 
-    // DTO class for returning Base64 encoded images
-    public static class ModeratorDTO {
-        public UUID id;
-        public String firstName;
-        public String lastName;
-        public String imageData;
-
-        public ModeratorDTO(UUID id, String firstName, String lastName, String imageData) {
-            this.id = id;
-            this.firstName = firstName;
-            this.lastName = lastName;
-            this.imageData = imageData;
-        }
-    }
+    // DTO class for returning Base64 encoded images as a Record
+    public record ModeratorDTO(UUID id, String firstName, String lastName, String imageData) {}
 }
